--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Idle Game</title>
-    <link rel="icon" type="image/png" href="FAVICON.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
     <script src="./js/lib/jquery.js"></script>
     <script src="./js/bootstrap.min.js"></script>
@@ -29,50 +29,71 @@
         <div class="row" id="idle-game">
             <h1>Idle Game</h1>
             <p>Do things. While you're idle! <a href="#" @click="reset()">Reset the game</a></p>
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <h2>Workers</h2>
-                <ul class="list-group">
-                    <li v-for="worker in workers" class="list-group-item">
+                <div class="panel panel-default" v-for="worker in workers">
+                    <div class="panel-heading">
+                        <img :src="'http://flathash.com/' + worker.name" width="48px">
                         <strong>{{ worker.name }} (<span v-for="title in worker.titles" >{{title}}</span>)</strong>
-                        <span>{{worker.currentTask()}} </span>
+                        <span class="badge pull-right">{{worker.currentTask}}</span>
+                    </div>
+                    <div class="panel-body">
                         <h4>Skills</h4>
                         <ul class="list-group">
                             <li v-for="skill in worker.skills" class="list-group-item">
-                                {{skill.name}}: {{skill.level}} (x{{Math.floor(Math.sqrt(skill.level))/100 + 1}})
-                            </li>                            
+                                {{skill.name}}: {{skill.level.toFixed(2)}} (x{{(Math.floor(Math.sqrt(skill.level))/100 + 1).toFixed(2)}})
+                            </li>
                         </ul>
-                    </li>
-                </ul>
+                    </div>
                 </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-5">
                 <h2>Resources</h2>
                 <ul class="list-group">
                     <li v-for="resource in resources" class="list-group-item">
-                        <span class="badge">{{ Math.floor(resource.amount) }}</span> {{ resource.name }}
+                        <img :src="'./img/icons/' + resource.img" width="24px" />
+                        <span class="badge">{{ Math.floor(resource.amount) }}</span>
+                        <span class="badge">{{(100 * (resource.amount - Math.floor(resource.amount))).toFixed(2)}}%</span> {{ resource.name }} {{ (resource.secondsPer||0).toFixed(1)}} seconds each
                         <!-- <div class="progress progress-striped active">
                             <div class="progress-bar" v-bind:style="{ width: 100 * (resource.amount - Math.floor(resource.amount)) + '%' }"></div>
                         </div> -->
                     </li>
                 </ul>
-                </div>
-            <div class="col-md-3">
-                <h2>Upgrade Menu</h2>
+            </div>
+            <div class="col-md-2">
+                <h2>Upgrades</h2>
                 <ul class="list-group">
                     <li v-for="upgrade in upgrades" class="list-group-item">
                         {{ upgrade.name }} {{ upgrade.cost }}
                     </li>
                 </ul>
-                </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-5">
                 <h2>Activities</h2>
                 <ul class="list-group">
                     <li v-for="activity in activities" class="list-group-item">
-                        {{ activity.name }} {{ activity.amountPerTick }}
-                        <a href="#" class="btn btn-default btn-xs pull-right" :data-task="activity.name" @click="assignWorkers">Assign All</a>
+                        {{ activity.name }}
+                        <div class="btn-group pull-right">
+                            <a href="#" class="btn btn-default btn-xs" :data-task="activity.name" @click="assignWorkers">Assign All</a>
+                            <a href="#" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li v-for="worker in workers">
+                                    <a href="#" :data-task="activity.name" :data-worker="worker.name" @click="assignWorker">Assign {{ worker.name }}</a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-2">
+                <h2>Game Stats</h2>
+                <ul class="list-group">
+                    <li v-for="stat in stats" class="list-group-item">
+                        {{ stat.name }}: {{ stat.value() }}
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-2">
                 <h2>Stats</h2>
                 <p>Ticks: {{ticks}}</p>
                 <p>ticksSinceLastTick: {{ticksSinceLastTick}}</p>
