--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Idle Game</title>
+    <title>Adventurers of Otium</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
 
     <script src="./js/lib/jquery.js"></script>
@@ -28,8 +28,8 @@
 <body>
     <div class="container">
         <div class="row" id="AdventurersGame">
-            <h1>Idle Game</h1>
-            <p>Do things. While you're idle! <a href="#" @click="reset()">Reset the game</a></p>
+            <h1>Adventurers of Otium</h1>
+            <p>Adventurering is dangerous. Hire someone else to do it for you! <a href="#" @click="reset()">Reset the game</a></p>
             <div class="col-md-4">
                 <h2>Coins and stuff</h2>
                 <div>Coins: {{coins}} ({{coinsPerTick}} cpt)</div>
