--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -36,16 +36,16 @@
                 <div>Status: {{status}}</div>
 
                 <h2>Hired Adventurers</h2>
-                <div v-for="hireable in hireables">
-                    <div>{{hireable.plural}}: {{getHiredCount(hireable.name)}}</div>
-                    <!--<button type="button" class="btn btn-primary btn-xs" @click="hire(hireable.name)" :disabled="!canHire(hireable.name)">Hire a {{hireable.name}} ({{getCost(hireable.name)}} coins)</button>-->
+                <div v-for="adventurer in adventurers">
+                    <div>{{adventurer.plural}}: {{getHiredCount(adventurer.name)}}</div>
+                    <!--<button type="button" class="btn btn-primary btn-xs" @click="hire(adventurer.name)" :disabled="!canHire(adventurer.name)">Hire a {{adventurer.name}} ({{getCost(adventurer.name)}} coins)</button>-->
                 </div>
-                <h3>Hires for hire</h3>
+                <h3>Adventurers for hire</h3>
                 <transition-group name="custom-classes-transition" enter-active-class="animated bounceIn" leave-active-class="animated bounceOut">
-                    <div v-for="hireable in availableHires" key="hireable.name">
+                    <div v-for="adventurer in availableHires" key="adventurer.name">
                         <div class="well">
-                            {{hireable.name}} Time left {{Math.floor(hireable.timeLeft)}} seconds
-                            <button type="button" class="btn btn-primary btn-xs" @click="hire(hireable)" :disabled="!canHire(hireable.name)">Hire ({{getCost(hireable.name)}} coins)</button>
+                            {{adventurer.name}} Time left {{Math.floor(adventurer.timeLeft)}} seconds
+                            <button type="button" class="btn btn-primary btn-xs" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
                         </div>
                     </div>
                 </transition-group>
@@ -63,8 +63,8 @@
                         <h4>{{contract.name}}</h4>
                         <div v-if="contract.requirements != undefined">
                             <h5>Requirements</h5>
-                            <div v-for="hireableRequirement in contract.requirements.hireables">
-                                {{hireableRequirement.amount}} {{hireableRequirement.type}}
+                            <div v-for="adventurerRequirement in contract.requirements.adventurers">
+                                {{adventurerRequirement.amount}} {{adventurerRequirement.type}}
                             </div>
                         </div>
                         Time left {{Math.floor(contract.timeLeft)}} seconds
