--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -41,10 +41,10 @@
                     <!--<button type="button" class="btn btn-primary btn-xs" @click="hire(adventurer.name)" :disabled="!canHire(adventurer.name)">Hire a {{adventurer.name}} ({{getCost(adventurer.name)}} coins)</button>-->
                 </div>
                 <h3>Adventurers for hire</h3>
-                <transition-group name="custom-classes-transition" enter-active-class="animated bounceIn" leave-active-class="animated bounceOut">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
                     <div v-for="adventurer in availableHires" key="adventurer.name">
                         <div class="well">
-                            {{adventurer.name}} Time left {{Math.floor(adventurer.timeLeft)}} seconds
+                            {{adventurer.name}} Time left {{Math.floor((adventurer.expires - Date.now())/1000)}} seconds
                             <button type="button" class="btn btn-primary btn-xs" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
                         </div>
                     </div>
@@ -58,7 +58,8 @@
                 <button type="button" class="btn btn-primary" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
 
                 <h3>Contracts</h3>
-                <div v-for="contract in availableContracts">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
+                <div v-for="contract in availableContracts" key="contract.name">
                     <div class="well">
                         <h4>{{contract.name}}</h4>
                         <div v-if="contract.requirements != undefined">
@@ -67,16 +68,17 @@
                                 {{adventurerRequirement.amount}} {{adventurerRequirement.type}}
                             </div>
                         </div>
-                        Time left {{Math.floor(contract.timeLeft)}} seconds
+                        Time left {{Math.floor((contract.expires - Date.now())/1000)}} seconds
                         <button type="button" class="btn btn-primary btn-xs" @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button>
                     </div>
                 </div>
+                </transition-group>
             </div>
             <div class="col-md-4">
                 <h2>Expeditions</h2>
 
                 <h3>Completed</h3>
-                <transition-group name="custom-classes-transition" enter-active-class="animated bounceIn" leave-active-class="animated bounceOut">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
                     <div v-for="expedition in completedExpeditions" key="expedition.id">
                         <div class="well">
                             <h4>{{expedition.contract.name}}</h4>
@@ -97,7 +99,7 @@
                 </transition-group>
 
                 <h3>Running</h3>
-                <transition-group name="custom-classes-transition" enter-active-class="animated bounceIn" leave-active-class="animated bounceOut">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
                     <div v-for="expedition in runningExpeditions" key="expedition.id">
                         <div class="well">
                             <h4>{{expedition.contract.name}}</h4>
