--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -44,10 +44,13 @@
                 <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
                     <div v-for="adventurer in availableHires" key="adventurer.name">
                         <div class="well">
-                            {{adventurer.name}} Time left {{Math.floor((adventurer.expires - Date.now())/1000)}} seconds
-                            <button type="button" class="btn btn-xs" 
+                            <h4>{{adventurer.name}}
+                                <button type="button" class="btn btn-xs pull-right" 
                             v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }"
                             @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
+                            
+                            </h4>
+                            <div>{{readableTime(adventurer.expires - Date.now())}} remaining</div>                            
                         </div>
                     </div>
                 </transition-group>
@@ -70,7 +73,7 @@
                                 {{adventurerRequirement.amount}} {{adventurerRequirement.type}}
                             </div>
                         </div>
-                        Time left {{Math.floor((contract.expires - Date.now())/1000)}} seconds
+                        <div>{{readableTime(contract.expires - Date.now())}} remaining</div>
                         <button type="button" class="btn btn-xs"
                             v-bind:class="{ 'btn-success': canSendExpedition(contract), 'btn-primary': !canSendExpedition(contract) }"
                              @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button>
@@ -107,11 +110,7 @@
                     <div v-for="expedition in runningExpeditions" key="expedition.id">
                         <div class="well">
                             <h4>{{expedition.contract.name}}</h4>
-                            <div class="progress progress-striped active">
-                                <!-- <div class="progress-bar" v-bind:style="{ width: 100 * (resource.amount - Math.floor(resource.amount)) + '%' }"></div> -->
-                                <div class="progress-bar" v-bind:style="{ width: 100 * (expedition.progress / expedition.contract.duration) + '%' }"></div>
-                            </div>
-                            <div>Progress: {{Math.floor(100 * expedition.progress / expedition.contract.duration)}}%</div>
+                            <div>{{readableTime(expedition.expires - Date.now())}} remaining</div>
                         </div>
                     </div>
                 </transition-group>
