--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -43,14 +43,10 @@
                 <h3>Adventurers for hire</h3>
                 <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
                     <div v-for="adventurer in availableHires" key="adventurer.name">
-                        <div class="well">
-                            <h4>{{adventurer.name}}
-                                <button type="button" class="btn btn-xs pull-right" 
-                            v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }"
-                            @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
-                            
+                        <div class="well" v-bind:class="{ 'animated flash': expiringSoon(adventurer.expires) }">
+                            <h4>{{adventurer.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
                             </h4>
-                            <div>{{readableTime(adventurer.expires - Date.now())}} remaining</div>                            
+                            <div>{{readableTime(adventurer.expires - Date.now())}} remaining</div>
                         </div>
                     </div>
                 </transition-group>
@@ -64,21 +60,19 @@
 
                 <h3>Contracts</h3>
                 <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
-                <div v-for="contract in availableContracts" key="contract.name">
-                    <div class="well">
-                        <h4>{{contract.name}}</h4>
-                        <div v-if="contract.requirements != undefined">
-                            <h5>Requirements</h5>
-                            <div v-for="adventurerRequirement in contract.requirements.adventurers">
-                                {{adventurerRequirement.amount}} {{adventurerRequirement.type}}
+                    <div v-for="contract in availableContracts" key="contract.name">
+                        <div class="well" v-bind:class="{ 'animated flash': expiringSoon(contract.expires) }">
+                            <h4>{{contract.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canSendExpedition(contract), 'btn-primary': !canSendExpedition(contract) }" @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button>
+                            </h4>
+                            <div v-if="contract.requirements != undefined">
+                                <h5>Requirements</h5>
+                                <div v-for="adventurerRequirement in contract.requirements.adventurers">
+                                    {{adventurerRequirement.amount}} {{adventurerRequirement.type}}
+                                </div>
                             </div>
+                            <div>{{readableTime(contract.expires - Date.now())}} remaining</div>
                         </div>
-                        <div>{{readableTime(contract.expires - Date.now())}} remaining</div>
-                        <button type="button" class="btn btn-xs"
-                            v-bind:class="{ 'btn-success': canSendExpedition(contract), 'btn-primary': !canSendExpedition(contract) }"
-                             @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button>
                     </div>
-                </div>
                 </transition-group>
             </div>
             <div class="col-md-4">
