--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -41,7 +41,7 @@
                     <!--<button type="button" class="btn btn-primary btn-xs" @click="hire(adventurer.name)" :disabled="!canHire(adventurer.name)">Hire a {{adventurer.name}} ({{getCost(adventurer.name)}} coins)</button>-->
                 </div>
                 <h3>Adventurers for hire</h3>
-                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
                     <div v-for="adventurer in availableHires" key="adventurer.name">
                         <div class="well" v-bind:class="{ 'animated flash': expiringSoon(adventurer.expires) }">
                             <h4>{{adventurer.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
@@ -56,10 +56,12 @@
 
                 <h2>{{location.name}}</h2>
                 <span>{{location.description}}</span>
-                <button type="button" class="btn btn-primary" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
+                <button type="button" class="btn btn-primary" 
+                 v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" 
+                 @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
 
                 <h3>Contracts</h3>
-                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
                     <div v-for="contract in availableContracts" key="contract.name">
                         <div class="well" v-bind:class="{ 'animated flash': expiringSoon(contract.expires) }">
                             <h4>{{contract.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canSendExpedition(contract), 'btn-primary': !canSendExpedition(contract) }" @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button>
@@ -79,10 +81,11 @@
                 <h2>Expeditions</h2>
 
                 <h3>Completed</h3>
-                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
                     <div v-for="expedition in completedExpeditions" key="expedition.id">
                         <div class="well">
                             <h4>{{expedition.contract.name}}</h4>
+                            <div>{{expedition.completionMessage}}</div>
                             <div v-if="expedition.success">
                                 <button type="button" class="btn btn-success" @click="claimReward(expedition)">
                                     Claim Rewards!
@@ -92,7 +95,6 @@
                                 </button>
                             </div>
                             <div v-if="!expedition.success">
-                                Failed!<br/>
                                 <button type="button" class="btn btn-danger" @click="removeExpedition(expedition)">Darnation!</button>
                             </div>
                         </div>
@@ -100,7 +102,7 @@
                 </transition-group>
 
                 <h3>Running</h3>
-                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
+                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
                     <div v-for="expedition in runningExpeditions" key="expedition.id">
                         <div class="well">
                             <h4>{{expedition.contract.name}}</h4>
