Renamed status to reknown and scaled it through locations

--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -41,7 +41,7 @@
             <div class="col-md-4">
                 <h2>Coins and stuff</h2>
                 <div>Coins: {{coins}}</div>
-                <div>Status: {{status}}</div>
+                <div>Reknown: {{reknown}}</div>
 
                 <h2>Hired Adventurers</h2>
                 <div v-for="adventurer in adventurers">
