Fixed reward bug

--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -12,12 +12,6 @@
     <script src="./js/lib/jquery.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Open+Sans:600" rel="stylesheet">
-    <style>
-        h2 {
-            font-family: 'Alegreya Sans SC', sans-serif;
-        }
-    </style>
     <!-- font-family: 'Open Sans', sans-serif;
      -->
     <link rel="stylesheet" href="css/alertify.min.css" />
@@ -63,9 +57,22 @@
             <div class="col-md-4">
                 <h2>
                     {{location.name}}
-                    <button type="button" class="btn btn-primary" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-primary" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
+                    </div>
                 </h2>
                 <span>{{location.description}}</span>
+                <div>
+                    <!-- <div class="col-md-2">
+                        <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">
+                            <span class="glyphicon glyphicon-chevron-left">&lt;</span>
+                        </button>
+                    </div> -->
+                    <!-- <div class="col-md-2">
+                        <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">
+                            <span class="glyphicon glyphicon-chevron-right">&gt;</span></button>
+                    </div> -->
+                </div>
 
                 <h3>Contracts</h3>
                 <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
