Added contracts for the Street Corner

--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -30,7 +30,7 @@
 <body>
     <div class="container">
         <div class="row" id="AdventurersGame">
-            <h1>Adventurers of Otium</h1>
+            <h1>Adventurers of <span @click="cheat()">O</span>tium</h1>
             <p>Adventurering is dangerous. Hire someone else to do it for you! <a href="#" @click="reset()">Reset the game</a></p>
             <div class="col-md-4">
                 <h2>Coins and stuff</h2>
