Reknown is now shown as text.

--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -35,7 +35,7 @@
             <div class="col-md-4">
                 <h2>Coins and stuff</h2>
                 <div>Coins: {{coins}}</div>
-                <div>Reknown: {{reknown}}</div>
+                <div>Reknown: {{reknownText()}} <span class="text-muted">({{reknown}})</span></div>
 
                 <h2>Hired Adventurers</h2>
                 <div v-for="adventurer in adventurers">
